INCLUDES = $(all_includes)
METASOURCES = AUTO
lib_LTLIBRARIES = libmathglpp.la
libmathglpp_la_LDFLAGS = -module -no-undefined
libmathglpp_la_LIBADD = $(GL_LIBS)
libmathglpp_la_SOURCES = GLBernsteinPolynomial.cpp GLMatrix.cpp GLVector.cpp
mathglpp_includedir = $(prefix)/include/MathGL++
mathglpp_include_HEADERS = GLBernsteinPolynomial.h GLMatrix.h GLPlane.h\
	GLQuaternion.h GLVector.h
